Bug 1394249 - SetNeedToCalcHasBCBorders to true when initialize nsTableFrame. r=mats

In the printing preview, we create continuous table frame if table is too
long to containing in a page. But the default value of
NeedToCalcHasBCBorders is false which means we don't calculate
HasBCBorders for continuous table frame. Thus, the border collapse is
not shown when printing preview.

MozReview-Commit-ID: IqhLSYuWj30